--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,27 @@
             name="description"
             content="Selfmade's contest Clash of Champion Season III"
         />
-        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/%PUBLIC_URL%/logo192.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="%PUBLIC_URL%/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="%PUBLIC_URL%/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="%PUBLIC_URL%/favicon-16x16.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="%PUBLIC_URL%/%PUBLIC_URL%/logo192.png"
+        />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Clash of Champions Season III - Selfmade</title>
         <meta
@@ -21,13 +38,16 @@
             content="Clash of Champions Season III - Selfmade"
         />
         <meta property="og:url" content="https://coc.eselfmade.in" />
-        <meta property="og:image" content="https://sm-coc.netlify.app/icon.png" />
+        <meta
+            property="og:image"
+            content="https://sm-coc.netlify.app/icon.png"
+        />
         <meta content="website" property="og:type" />
         <link href="https://coc.eselfmade.in" rel="canonical" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap"
             rel="stylesheet"
         />
     </head>
